[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.1"
colored = "2.0.0"
legion = "=0.3.1"
serde = { version = "=1.0.115" }
ron = "=0.6.1"

# TODO: This breaks the windows build. Can I specify this on the commandline?
# [profile.release]
# lto = "thin"

